# wage_estimations

./: README.md  main.py  pyproject.toml
tests/: test_estimates.py
wage_estimations/: cli.py  estimation.py
